# 9erp-flask

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  students.xlsx
swagger_server/: __main__.py  config.py  util.py
swagger_server/controllers/: approvals_controller.py  authorization_controller.py  branches_controller.py  concession_controller.py  db_controller.py  default_controller.py  employees_controller.py  receipts_controller.py  reports_controller.py  students_controller.py
swagger_server/models/: __init__.py  add_concession_request.py  approval_request.py  approval_response.py  branch.py  branch_create_request.py  branch_list.py  branch_update_request.py  bulk_update_request.py  bulk_update_request_filter_criteria.py  bulk_update_request_update_fields.py  bulk_update_response.py  db_get_request.py  db_update_request.py  employee.py  employee_create_request.py  employee_list.py  employee_update_request.py  error.py  login_request.py  receipt.py  receipt_create_request.py  receipt_list.py  receipt_update_request.py  report_data.py  report_data_report.py  reset_password_request.py  response.py  send_email_request.py  send_otp_request.py  send_password_request.py  student.py  student_create_request.py  student_list.py  student_update_request.py
swagger_server/swagger/: swagger.yaml
swagger_server/test/: test_approvals_controller.py  test_branches_controller.py  test_default_controller.py  test_employees_controller.py  test_receipts_controller.py  test_reports_controller.py  test_students_controller.py
